JPS-9380: Fixed. Store expand/collapse state in redux

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -41,3 +41,10 @@
   margin-left: calc(unit * 2);
 }
 
+.folderLoader {
+  margin-left: calc(unit / 2);
+}
+
+.link {
+  outline: none;
+}
